--- a/RiemannSumProject/RiemannSum/src/main/res/layout/fragment_controls.xml
+++ b/RiemannSumProject/RiemannSum/src/main/res/layout/fragment_controls.xml
@@ -49,12 +49,17 @@
                 android:id="@+id/interval_count_label"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="@string/controls_n_intervals"/>
+                android:text="@string/controls_n_intervals"
+                android:labelFor="@+id/interval_count_seekbar"
+                android:importantForAccessibility="no"
+                />
         <TextView
                 android:id="@+id/interval_count_value"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:importantForAccessibility="no"
+                />
     </LinearLayout>
     <LinearLayout
             android:layout_height="wrap_content"
@@ -72,6 +77,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/controls_submit"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:contentDescription="@string/controls_ax_submit"/>
     </LinearLayout>
 </RelativeLayout>
